--- a/learning-html/pages/index.html
+++ b/learning-html/pages/index.html
@@ -1,2 +1,68 @@
-<h1>My First Website!</h1>
-<h2>My name is Ms. Ifft</h2>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>My First Website</title>
+</head>
+<body>
+	<!-- My headers -->
+	<h1>This is a title</h1>
+	<h2>This is a title</h2>
+	<h3>This is a title</h3>
+	<h4>This is a title</h4>
+	<h5>This is a title</h5>
+	<h6>This is a title</h6>
+
+	<!-- My text -->
+	<p>klsjdflkas<b>jldfjl;asjdfljasld</b>kfjaslkdfsaf</p>
+	<p><i>lkdjfalksdjflksaj</i></p>
+	<p><b>alskdjf<i>lkasjdf</b>kljsld</i></p>
+
+	<!-- Unordered Lists -->
+	<ul>
+		<li>United States of America</li>
+		<li>France</li>
+		<li>Spain</li>
+	</ul>
+
+	<!-- Ordered Lists -->
+	<ol>
+		<li><b><a href="https://www.google.com">United States of America</a></b></li>
+		<li>France</li>
+		<li>Spain</li>
+	</ol>
+
+	<!-- Links -->
+	<p><a 
+		href="https://fwparker.myschoolapp.com" target="_blank">The Portal
+	</a></p>
+
+	<p><a href="about_me.html" target="_blank">About Me</a></p>
+	<img src="https://media.licdn.com/dms/image/v2/D4E03AQGenZ6apWa7-Q/profile-displayphoto-scale_200_200/B4EZkGclxGGoAY-/0/1756749782700?e=2147483647&v=beta&t=09Hm6qXwkj1x00-qpYccimAR-I6GSumPEV-lmG0Ymsk" alt="photo of Logan Gupta">
+
+	
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
